tests/snapshots/examples_fixtures/aoc__2025__aoc_day7_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day7_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day7_haskell_style.flx:29:16
   |
29 |     let left = slice(arr, 0, idx)
   |                ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day7_haskell_style.flx:30:17
   |
30 |     let right = slice(arr, idx + 1, len(arr))
   |                 ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day7_haskell_style.flx:46:21
   |
46 |     zeros(n, i + 1, push(acc, 0))
   |                     ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day7_haskell_style.flx:93:13
   |
93 |     let m = put({}, "next", next_mask)
   |             ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day7_haskell_style.flx:94:5
   |
94 |     put(m, "split", split_count)
   |     ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day7_haskell_style.flx:98:11
   |
98 |     match get(x, "next") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day7_haskell_style.flx:105:11
    |
105 |     match get(x, "split") {
    |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day7_haskell_style.flx:143:13
    |
143 |     let m = put({}, "next", next_counts)
    |             ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day7_haskell_style.flx:144:5
    |
144 |     put(m, "done", finished)
    |     ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day7_haskell_style.flx:148:11
    |
148 |     match get(x, "next") {
    |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day7_haskell_style.flx:155:11
    |
155 |     match get(x, "done") {
    |           ^^^

Hint:
  Define it first: let get = ...;

Found 11 errors.
== stdout ==
<not executed>
